# oxus-backend

./: .gitignore  README.md  manage.py  pyproject.toml
accounting/: admin.py  apps.py
accounting/migrations/: 0001_initial.py  0002_chartaccount.py  0003_chartaccount_ru_name_chartaccount_tj_name.py  0004_alter_chartaccount_options_and_more.py  0005_generalledger_account.py  0006_account.py  0007_alter_account_code_alter_account_description.py  0008_alter_account_code_alter_account_description.py  0009_alter_account_options.py  0010_chartaccount_account_number.py  0011_fill_chart_account.py
accounting/models/: __init__.py
api/: me.py  model_name_to_entity_name.py  router.py  urls.py
auth/: authentication.py  views.py
black_list/: apps.py  models.py  urls.py  views.py
common/: FullDjangoModelPermissions.py  __init__.py  apps.py  constants.py  current_user.py  export_pdf.py  get_terminal_records.py  mixinUid.py  terminal_payment_change_contract.py  terminal_payment_change_date.py
common/abacus/: connection.py  search_abacus_advanced.py  search_abacus_client_id.py
credits/: admin.py
customer/: admin.py  apps.py
division/: admin.py  apps.py  urls.py
dynamic-rest-master/: adaptation2django4.txt  install_requires.txt  setup.py
helpdesk/: admin.py  urls.py  views.py
oxus/: asgi.py  settings.py  settings_local_example.py  urls.py  wsgi.py
reports/: admin.py  urls.py
request_credit/: admin.py  apps.py  models.py  urls.py
scan/: admin.py
scoring/: admin.py
terminals/: admin.py
users/: admin.py  models.py  serializer.py  views.py  viewset.py
(+393 files in other folders)
